--- a/src/app/components/accounts/accounts.component.html
+++ b/src/app/components/accounts/accounts.component.html
@@ -47,12 +47,12 @@
               <div class="account-amounts-primary uk-width-1-1">
                 <div *ngIf="account.pending.gt(0)" class="incoming-label">
                   <div class="text-snippet">{{ 'general.new' | transloco }}</div>
-                  <div class="text-full">+{{ account.pending | rai: 'mnano,true' | amountsplit: 0 }}{{ account.pending | rai: 'mnano,true' | amountsplit: 1 }} XNO</div>
+                  <div class="text-full">+{{ account.pending | rai: 'mnano,true' | amountsplit: 0 | number}}{{ account.pending | rai: 'mnano,true' | amountsplit: 1 }} FFD</div>
                 </div>
                 <span class="amounts" [title]="( account.balanceRaw.gt(0) ? ( '+' + ( account.balanceRaw.toString(10) ) + ' raw' ) : '' )">
-                  <span class="amount-integer">{{ account.balance | rai: 'mnano,true' | amountsplit: 0 }}</span>
+                  <span class="amount-integer">{{ account.balance | rai: 'mnano,true' | amountsplit: 0 | number}}</span>
                   <span class="amount-fractional">{{ account.balance | rai: 'mnano,true' | amountsplit: 1 }}</span>
-                  <span class="currency-name">XNO</span>
+                  <span class="currency-name">FFD</span>
                 </span>
               </div>
               <div class="account-amounts-converted uk-width-1-1 text-half-muted">
@@ -83,7 +83,7 @@
                 [class]="[ 'uk-width-auto', 'uk-text-truncate', 'account-container', !isLedgerWallet ? 'narrow' : 'wide' ]"
               >
                 <div class="uk-flex">
-                  <app-nano-identicon scale="12" [accountID]="account.id" [settingIdenticonsStyle]="settings.settings.identiconsStyle" class="nano-identicon" *ngIf="(settings.settings.identiconsStyle !== 'none')"></app-nano-identicon>
+                  <!-- <app-nano-identicon scale="12" [accountID]="account.id" [settingIdenticonsStyle]="settings.settings.identiconsStyle" class="nano-identicon" *ngIf="(settings.settings.identiconsStyle !== 'none')"></app-nano-identicon> -->
                   <div class="uk-width-expand">
                     <div class="uk-width-1-1">
                       <div class="account-index" *ngIf="viewAdvanced"><span>#</span>{{ account.index }}</div>
