--- a/src/app/components/address-book/address-book.component.html
+++ b/src/app/components/address-book/address-book.component.html
@@ -26,13 +26,13 @@
 
         <div class="advanced-options" *ngIf="showAdvancedOptions">
           <span [title]="( totalTrackedBalanceRaw.gt(0) ? ( '+' + ( totalTrackedBalanceRaw.toString(10) ) + ' raw' ) : '' )">
-            <span class="amount-integer">{{ totalTrackedBalance | rai: 'mnano,true' | amountsplit: 0 }}</span>
+            <span class="amount-integer">{{ totalTrackedBalance | rai: 'mnano,true' | amountsplit: 0 | number}}</span>
             <span class="amount-fractional">{{ totalTrackedBalance | rai: 'mnano,true' | amountsplit: 1 }}</span>
-            <span class="currency-name">XNO</span>
+            <span class="currency-name">FFD</span>
           </span>
           <div *ngIf="totalTrackedPending.gt(0)" class="incoming-label">
             <div class="text-snippet">{{ 'general.new' | transloco }}</div>
-            <div class="text-full">+{{ totalTrackedPending | rai: 'mnano,true' | amountsplit: 0 }}{{ totalTrackedPending | rai: 'mnano,true' | amountsplit: 1 }} XNO</div>
+            <div class="text-full">+{{ totalTrackedPending | rai: 'mnano,true' | amountsplit: 0 | number}}{{ totalTrackedPending | rai: 'mnano,true' | amountsplit: 1 }} FFD</div>
           </div>
           <div class="account-amounts-converted uk-width-1-1 text-half-muted">
             {{ totalTrackedBalanceFiat | fiat: appSettings.settings.displayCurrency }}
@@ -107,13 +107,13 @@
                       <ng-container *ngIf="(walletService.wallet.updatingBalance === false) else balanceLoading">
                         <div class="account-amounts-primary uk-width-1-1">
                           <span [title]="( accounts[addressBook.account]?.balanceRaw.gt(0) ? ( '+' + ( accounts[addressBook.account]?.balanceRaw.toString(10) ) + ' raw' ) : '' )">
-                            <span class="amount-integer">{{ accounts[addressBook.account]?.balance | rai: 'mnano,true' | amountsplit: 0 }}</span>
+                            <span class="amount-integer">{{ accounts[addressBook.account]?.balance | rai: 'mnano,true' | amountsplit: 0 | number}}</span>
                             <span class="amount-fractional">{{ accounts[addressBook.account]?.balance | rai: 'mnano,true' | amountsplit: 1 }}</span>
-                            <span class="currency-name">XNO</span>
+                            <span class="currency-name">FFD</span>
                           </span>
                           <div *ngIf="accounts[addressBook.account]?.pending.gt(0)" class="incoming-label">
                             <div class="text-snippet">New</div>
-                            <div class="text-full">+{{ accounts[addressBook.account]?.pending | rai: 'mnano,true' | amountsplit: 0 }}{{ accounts[addressBook.account]?.pending | rai: 'mnano,true' | amountsplit: 1 }} XNO</div>
+                            <div class="text-full">+{{ accounts[addressBook.account]?.pending | rai: 'mnano,true' | amountsplit: 0 | number}}{{ accounts[addressBook.account]?.pending | rai: 'mnano,true' | amountsplit: 1 }} FFD</div>
                           </div>
                         </div>
                         <div class="account-amounts-converted uk-width-1-1 text-half-muted">
@@ -163,7 +163,7 @@
                 <div class="uk-form-controls">
                   <div class="uk-inline uk-width-1-1">
                     <a class="uk-form-icon uk-form-icon-flip" uk-icon="icon: camera" (click)="openQR('account1','account')" uk-tooltip [title]="t('general.scan-qr-code')" *ngIf="creatingNewEntry"></a>
-                    <input type="text" class="uk-input" id="new-address-account" [(ngModel)]="newAddressAccount" [disabled]="!creatingNewEntry" placeholder="nano_abc123">
+                    <input type="text" class="uk-input" id="new-address-account" [(ngModel)]="newAddressAccount" [disabled]="!creatingNewEntry" placeholder="ffd_abc123">
                   </div>
                 </div>
               </div>
