--- a/src/app/components/helpers/nano-transaction-mobile/nano-transaction-mobile.component.html
+++ b/src/app/components/helpers/nano-transaction-mobile/nano-transaction-mobile.component.html
@@ -13,12 +13,12 @@
 				class="type-identicon-combined"
 				*ngSwitchCase="(settingIdenticonsStyle !== 'none')"
 			>
-				<app-nano-identicon
+				<!-- <app-nano-identicon
 					scale="6"
 					[accountID]="(transaction.link_as_account || transaction.account)"
 					[settingIdenticonsStyle]="settingIdenticonsStyle"
 					class="nano-identicon"
-				></app-nano-identicon>
+				></app-nano-identicon> -->
 				<ng-container [ngSwitch]="true">
 					<span
 						class="type-icon-container uk-text-muted"
@@ -119,9 +119,9 @@
 			>{{ 'general.blockactions.unknown-action' | transloco }}<ng-template [ngTemplateOutlet]="unconfirmedIcon"></ng-template></div>
 		</ng-container>
 		<div class="amount" *ngIf="isReceivableTransaction || isSendTransaction || isReceiveTransaction">
-			<span class="amount-integer">{{ transaction.amount | rai: 'mnano,true' | amountsplit: 0 }}</span>
+			<span class="amount-integer">{{ transaction.amount | rai: 'mnano,true' | amountsplit: 0 | number}}</span>
 			<span class="amount-fractional">{{ transaction.amount | rai: 'mnano,true' | amountsplit: 1 }}</span>
-			<span class="currency-name">XNO</span>
+			<span class="currency-name">FFD</span>
 		</div>
 	</div>
 	<div class="column account-date uk-text-truncate">
