--- a/src/app/components/sign/sign.component.html
+++ b/src/app/components/sign/sign.component.html
@@ -1,7 +1,7 @@
 <div uk-grid>
   <div class="uk-width-1-1">
-    <h2 *ngIf="shouldSign">Sign Nano Block</h2>
-    <h2 *ngIf="!shouldSign">Process Nano Block</h2>
+    <h2 *ngIf="shouldSign">Sign FFD Block</h2>
+    <h2 *ngIf="!shouldSign">Process FFD Block</h2>
 
     <!-- Confirmation Panel -->
     <div uk-grid *ngIf="activePanel == 'confirm'" class="uk-animation-slide-left">
@@ -18,12 +18,12 @@
 
             <div *ngIf="txType != txTypes.change">
               <div class="block-amount-primary" [class.uk-text-danger]="txType == txTypes.send" [class.uk-text-success]="txType == txTypes.receive">
-                <span class="amount-integer">{{ rawAmount | rai: 'mnano,true' | amountsplit: 0 }}</span>
+                <span class="amount-integer">{{ rawAmount | rai: 'mnano,true' | amountsplit: 0 | number}}</span>
                 <span class="amount-fractional">{{ rawAmount | rai: 'mnano,true' | amountsplit: 1 }}</span>
-                <span class="currency-name">XNO</span>
+                <span class="currency-name">FFD</span>
               </div>
               <div style="margin: 8px 0 -1px 0;" class="text-half-muted" *ngIf="settings.settings.displayCurrency && amountFiat !== null">{{ amountFiat | fiat: settings.settings.displayCurrency }}</div>
-              <div style="margin: 1px 0 -1px 0;" class="uk-text-muted" *ngIf="settings.settings.displayCurrency && amountFiat !== null">{{ price.price.lastPrice | fiat: settings.settings.displayCurrency }} / XNO</div>
+              <div style="margin: 1px 0 -1px 0;" class="uk-text-muted" *ngIf="settings.settings.displayCurrency && amountFiat !== null">{{ price.price.lastPrice | fiat: settings.settings.displayCurrency }} / FFD</div>
             </div>
           </div>
         </div>
@@ -37,7 +37,7 @@
                 <div class="uk-flex uk-flex-nowrap uk-width-auto uk-text-truncate" style="max-width: calc(100% - 35px);">
                   <a [routerLink]="'/account/' + fromAccountID" class="uk-link-reset account-container uk-text-truncate" uk-tooltip title="View Account Details">
                     <div class="identicon-address-book-row">
-                      <app-nano-identicon scale="12" [accountID]="fromAccountID" [settingIdenticonsStyle]="settings.settings.identiconsStyle" class="nano-identicon" *ngIf="(settings.settings.identiconsStyle !== 'none')"></app-nano-identicon>
+                      <!-- <app-nano-identicon scale="12" [accountID]="fromAccountID" [settingIdenticonsStyle]="settings.settings.identiconsStyle" class="nano-identicon" *ngIf="(settings.settings.identiconsStyle !== 'none')"></app-nano-identicon> -->
                       <div class="account-label uk-text-truncate" *ngIf="fromAddressBook">{{ fromAddressBook }}</div>
                     </div>
                     <div class="nano-address-clickable nano-address-monospace uk-text-truncate"><app-nano-account-id [accountID]="fromAccountID"></app-nano-account-id></div>
@@ -57,7 +57,7 @@
                       <span class="balance-amount-primary">
                         <span class="amount-integer">{{ fromAccountBalance ? (fromAccountBalance | rai: 'mnano,true' | amountsplit: 0) : 'N/A' }}</span>
                         <span class="amount-fractional">{{ fromAccountBalance ? (fromAccountBalance | rai: 'mnano,true' | amountsplit: 1) : '' }}</span>
-                        <span class="currency-name">{{ fromAccountBalance ? 'XNO' : '' }}</span>
+                        <span class="currency-name">{{ fromAccountBalance ? 'FFD' : '' }}</span>
                       </span>
                     </span>
                   </div>
@@ -66,9 +66,9 @@
                     <span class="block-balance">
                       <span class="balance-amount-primary uk-text-danger">
                         <span class="amount-sign">-</span>
-                        <span class="amount-integer">{{ rawAmount | rai: 'mnano,true' | amountsplit: 0 }}</span>
+                        <span class="amount-integer">{{ rawAmount | rai: 'mnano,true' | amountsplit: 0 | number}}</span>
                         <span class="amount-fractional">{{ rawAmount | rai: 'mnano,true' | amountsplit: 1 }}</span>
-                        <span class="currency-name">XNO</span>
+                        <span class="currency-name">FFD</span>
                       </span>
                     </span>
                   </div>
@@ -85,7 +85,7 @@
                 <div *ngIf="txType !== txTypes.change" class="uk-flex uk-flex-nowrap uk-width-auto uk-text-truncate" style="max-width: calc(100% - 35px);">
                   <a [routerLink]="'/account/' + toAccountID" class="uk-link-reset account-container uk-text-truncate" uk-tooltip title="View Account Details">
                     <div class="identicon-address-book-row">
-                      <app-nano-identicon scale="12" [accountID]="toAccountID" [settingIdenticonsStyle]="settings.settings.identiconsStyle" class="nano-identicon" *ngIf="(settings.settings.identiconsStyle !== 'none')"></app-nano-identicon>
+                      <!-- <app-nano-identicon scale="12" [accountID]="toAccountID" [settingIdenticonsStyle]="settings.settings.identiconsStyle" class="nano-identicon" *ngIf="(settings.settings.identiconsStyle !== 'none')"></app-nano-identicon> -->
                       <div class="account-label uk-text-truncate" *ngIf="toAddressBook">{{ toAddressBook }}</div>
                     </div>
                     <div class="nano-address-clickable nano-address-monospace uk-text-truncate"><app-nano-account-id [accountID]="toAccountID"></app-nano-account-id></div>
@@ -99,7 +99,7 @@
                 <div *ngIf="txType === txTypes.change" class="uk-flex uk-flex-nowrap uk-width-auto uk-text-truncate" style="max-width: calc(100% - 35px);">
                   <a [routerLink]="'/account/' + currentBlock.representative" class="uk-link-reset account-container uk-text-truncate" uk-tooltip title="View Account Details">
                     <div class="identicon-address-book-row">
-                      <app-nano-identicon scale="12" [accountID]="currentBlock.representative" [settingIdenticonsStyle]="settings.settings.identiconsStyle" class="nano-identicon" *ngIf="(settings.settings.identiconsStyle !== 'none')"></app-nano-identicon>
+                      <!-- <app-nano-identicon scale="12" [accountID]="currentBlock.representative" [settingIdenticonsStyle]="settings.settings.identiconsStyle" class="nano-identicon" *ngIf="(settings.settings.identiconsStyle !== 'none')"></app-nano-identicon> -->
                       <div class="account-label uk-text-truncate" *ngIf="repAddressBook">{{ repAddressBook }}</div>
                     </div>
                     <div class="nano-address-clickable nano-address-monospace uk-text-truncate"><app-nano-account-id [accountID]="currentBlock.representative"></app-nano-account-id></div>
@@ -119,7 +119,7 @@
                       <span class="balance-amount-primary">
                         <span class="amount-integer">{{ toAccountBalance && txType === txTypes.receive ? (toAccountBalance | rai: 'mnano,true' | amountsplit: 0) : 'N/A' }}</span>
                         <span class="amount-fractional">{{ toAccountBalance && txType === txTypes.receive ? (toAccountBalance | rai: 'mnano,true' | amountsplit: 1) : '' }}</span>
-                        <span class="currency-name">{{ toAccountBalance && txType === txTypes.receive ? 'XNO' : '' }}</span>
+                        <span class="currency-name">{{ toAccountBalance && txType === txTypes.receive ? 'FFD' : '' }}</span>
                       </span>
                     </span>
                   </div>
@@ -128,9 +128,9 @@
                     <span class="block-balance">
                       <span class="balance-amount-primary uk-text-success">
                         <span class="amount-sign">+</span>
-                        <span class="amount-integer">{{ rawAmount | rai: 'mnano,true' | amountsplit: 0 }}</span>
+                        <span class="amount-integer">{{ rawAmount | rai: 'mnano,true' | amountsplit: 0 | number}}</span>
                         <span class="amount-fractional">{{ rawAmount | rai: 'mnano,true' | amountsplit: 1 }}</span>
-                        <span class="currency-name">XNO</span>
+                        <span class="currency-name">FFD</span>
                       </span>
                     </span>
                   </div>
